unpackaged/main/default/objects/Opportunity/fields/Last_Alerte_For_Managers_MQL__c.field-meta.xml
<CustomField>
    <fullName>Last_Alerte_For_Managers_MQL__c</fullName>
    <description>last time when Job BatchAlertManagerOppyStageMql  sent alerte to managers</description>
    <label>Last Alerte For Managers MQL</label>
    <type>DateTime</type>
</CustomField>