unpackaged/main/default/objects/Opportunity/fields/Last_Alerte_For_Sales_MQL__c.field-meta.xml
<CustomField>
    <fullName>Last_Alerte_For_Sales_MQL__c</fullName>
    <description>Last time when the job BatchAlertOwnerOppyStageMql  sent alerte to Sales</description>
    <label>Last Alerte For Sales MQL</label>
    <type>DateTime</type>
</CustomField>