unpackaged/main/default/objects/Opportunity/fields/Last_contract_with_competitor__c.field-meta.xml
<CustomField>
    <fullName>Last_contract_with_competitor__c</fullName>
    <description>Last contract with competitor</description>
    <inlineHelpText>Last contract with competitor</inlineHelpText>
    <label>Last contract with competitor</label>
    <type>Date</type>
</CustomField>