unpackaged/main/default/objects/Opportunity/fields/Lead_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campaign_Name__c</fullName>
    <label>Lead Campaign Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>