unpackaged/main/default/objects/Opportunity/fields/Licences_Booking_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Licences_Booking_Amount2__c</fullName>
    <description>la somme des produits de type licence booking</description>
    <label>Licences Booking Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.StructureLevel1__c</field>
        <operation>equals</operation>
        <value>Licenses</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>