unpackaged/main/default/objects/Opportunity/fields/Licences_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Licences_Booking_Amount__c</fullName>
    <description>Amount of Licences Booking</description>
    <label>Inhouse Licences Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>