unpackaged/main/default/objects/Opportunity/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link : l'url de l'opportunité utilisé dans différents process</description>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( '/services', $Api.Partner_Server_URL_300))+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>