unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>la raison de la perte de l'opportunité</description>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competition choosen</fullName>
            </value>
            <value>
                <fullName>Project postponed</fullName>
            </value>
            <value>
                <fullName>Legal Terms</fullName>
            </value>
            <value>
                <fullName>Financial Terms</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Lost of project</fullName>
            </value>
            <value>
                <fullName>Group Centralisation</fullName>
            </value>
            <value>
                <fullName>Change of governance</fullName>
            </value>
            <value>
                <fullName>Economic context</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Client budget not adapted</fullName>
            </value>
            <value>
                <fullName>Product features</fullName>
            </value>
            <value>
                <fullName>Duplicate opportunity</fullName>
            </value>
            <value>
                <fullName>International scope</fullName>
            </value>
            <value>
                <fullName>Customer financial situation</fullName>
            </value>
            <value>
                <fullName>Other provider choosen</fullName>
            </value>
            <value>
                <fullName>Deployment time</fullName>
            </value>
            <value>
                <fullName>UX product ergonomic</fullName>
            </value>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Services offered</fullName>
            </value>
            <value>
                <fullName>Incomplete data</fullName>
            </value>
            <value>
                <fullName>Cannot be reached</fullName>
            </value>
            <value>
                <fullName>Wrong coordinates</fullName>
            </value>
            <value>
                <fullName>Non commercial opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>