unpackaged/main/default/objects/Opportunity/fields/Lost_date__c.field-meta.xml
<CustomField>
    <fullName>Lost_date__c</fullName>
    <label>Lost date</label>
    <type>DateTime</type>
</CustomField>