unpackaged/main/default/objects/Opportunity/fields/Lost_MQL__c.field-meta.xml
<CustomField>
    <fullName>Lost_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calculated field to check whether the oppy was lost while in MQL stage</inlineHelpText>
    <label>Lost MQL</label>
    <type>Checkbox</type>
</CustomField>