unpackaged/main/default/objects/Opportunity/fields/Manual_Sync_TS__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sync_TS__c</fullName>
    <label>Manual Sync TS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>