unpackaged/main/default/objects/Opportunity/fields/Marketo_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Lead_Id__c</fullName>
    <description>Id technique du Lead</description>
    <label>Marketo Lead Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>