unpackaged/main/default/objects/Opportunity/fields/Mercury_Oppty_Number__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Oppty_Number__c</fullName>
    <description>To allow matching with Source System Mercury and SFDC</description>
    <label>Mercury Oppty Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>