unpackaged/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>Metrics</description>
    <inlineHelpText>Weak = Customer challenges not understood or identified | Moderate = Customer challenges understood but impact not quantified | Strong = Customer challenges understood; impact quantified and root cause(s) are clear</inlineHelpText>
    <label>Metrics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>