unpackaged/main/default/objects/Opportunity/fields/Missing_Quote__c.field-meta.xml
<CustomField>
    <fullName>Missing_Quote__c</fullName>
    <description>une opportunité sans devis</description>
    <formula>AND(ISBLANK(SBQQ__PrimaryQuote__c) , ISPICKVAL(StageName , 'B - Negotiate') )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Quote</label>
    <type>Checkbox</type>
</CustomField>