unpackaged/main/default/objects/Opportunity/fields/Nbr_of_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Product_Lines__c</fullName>
    <description>Used to count the number of Product Lines in the Opportunity</description>
    <label>Nbr of Product Lines</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>