unpackaged/main/default/objects/Opportunity/fields/New_MRR__c.field-meta.xml
<CustomField>
    <fullName>New_MRR__c</fullName>
    <inlineHelpText>New MRR should be fulfilled manually when creatiing the opportunity and becomes calculated once a quote BuyMe has been created.</inlineHelpText>
    <label>New max MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>