unpackaged/main/default/objects/Opportunity/fields/New_SaaS_Booking_BuyMe__c.field-meta.xml
<CustomField>
    <fullName>New_SaaS_Booking_BuyMe__c</fullName>
    <label>New SaaS Booking BuyMe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>