unpackaged/main/default/objects/Opportunity/fields/New_SaaS_Booking_CPQ_TS__c.field-meta.xml
<CustomField>
    <fullName>New_SaaS_Booking_CPQ_TS__c</fullName>
    <label>New SaaS Booking CPQ TS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>