unpackaged/main/default/objects/Opportunity/fields/Old_MRR__c.field-meta.xml
<CustomField>
    <fullName>Old_MRR__c</fullName>
    <description>Field used to calculate Saas Booking for Saas to Saas deals</description>
    <inlineHelpText>Old MRR should be set to 0 for Newbiz, Newcli or Upsell</inlineHelpText>
    <label>Old MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>