unpackaged/main/default/objects/Opportunity/fields/Old_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Old_Product_Line__c</fullName>
    <description>Previous product line (mandatory for Migrations)</description>
    <label>Old Offer (Product Line)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>