unpackaged/main/default/objects/Opportunity/fields/Old_SaaS_Booking_BuyMe__c.field-meta.xml
<CustomField>
    <fullName>Old_SaaS_Booking_BuyMe__c</fullName>
    <label>Old SaaS Booking BuyMe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>