unpackaged/main/default/objects/Opportunity/fields/OP_OD__c.field-meta.xml
<CustomField>
    <fullName>OP_OD__c</fullName>
    <label>OP/OD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OP_OD</valueSetName>
    </valueSet>
</CustomField>