unpackaged/main/default/objects/Opportunity/fields/Operational_System__c.field-meta.xml
<CustomField>
    <fullName>Operational_System__c</fullName>
    <label>Operational System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operational_System</valueSetName>
    </valueSet>
</CustomField>