unpackaged/main/default/objects/Opportunity/fields/OpportunitiesCount__c.field-meta.xml
<CustomField>
    <fullName>OpportunitiesCount__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>