unpackaged/main/default/objects/Opportunity/fields/Opportunity_Cross_BU__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Cross_BU__c</fullName>
    <description>Check if the oppy creator's BU equals the BU deducted of the oppy</description>
    <formula>IF (
AND(
TECH_BU_deducted__c = TECH_BU_Created_By_2__c ,
TECH_Created_Stage__c = 'G - Sales Ready',
OR(
ISPICKVAL( StageName , 'G - MQL'),
ISPICKVAL( StageName , 'G - Sales Ready'),
ISPICKVAL( StageName , 'F - Identify the needs'),
ISPICKVAL( StageName , 'E - Analyze the needs'),
ISPICKVAL( StageName , 'D - Draw up the solution'),
ISPICKVAL( StageName , 'C - Validate the solution'),
ISPICKVAL( StageName , 'B - Negotiate'),
ISPICKVAL( StageName , 'A - Sign'),
ISPICKVAL( StageName , 'Closed Won'),
ISPICKVAL( StageName , 'Closed Lost'),
ISPICKVAL( StageName , 'No Go Client'),
ISPICKVAL( StageName , 'No Go CEGID')
)
),"No",

IF(
OR(TECH_Created_Stage__c &lt;&gt; 'G - Sales Ready', TECH_BU_Created_By_2__c = 'Not Assigned'), "",

IF(
OR(ISPICKVAL(LeadSource, 'SDR'), ISPICKVAL(LeadSource, 'Partner'), ISPICKVAL(LeadSource, 'EuroCRM'), ISPICKVAL(LeadSource, 'Customer Care'), ISPICKVAL(LeadSource, 'SDR-Marketing Prospecting'), ISPICKVAL(LeadSource,'SDR Lead Purchase')),"",

"Yes"

)
)
)</formula>
    <label>Opportunity Cross-BU</label>
    <type>Text</type>
</CustomField>