unpackaged/main/default/objects/Opportunity/fields/Opportunity_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quality_Score__c</fullName>
    <formula>IF( OR
			    (AND(SaaS_Booking_Amount__c &gt;= 30000, 
												ISBLANK(Score_MED__c)),
		    	AND(SaaS_Booking_Amount__c &gt;= 10000,
											ISBLANK(NextStep ))	,
								AND(OR(ISPICKVAL( Forecast_Category_EDIT__c , "Upside"),
															ISPICKVAL( Forecast_Category_EDIT__c , "Firm"),
														ISPICKVAL( Forecast_Category_EDIT__c , "Probable")), 
												CloseDate &lt; TODAY() -15 ),
								AND(OR(ISPICKVAL( Forecast_Category_EDIT__c , "Upside"),
															ISPICKVAL( Forecast_Category_EDIT__c , "Firm"),
														ISPICKVAL( Forecast_Category_EDIT__c , "Probable")),
					 DATEVALUE(LastModifiedDate) &lt; TODAY() - 90) 
							 
								),
		  0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>