unpackaged/main/default/objects/Opportunity/fields/Oppy_AutoCreated__c.field-meta.xml
<CustomField>
    <fullName>Oppy_AutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oppy AutoCreated</label>
    <type>Checkbox</type>
</CustomField>