unpackaged/main/default/objects/Opportunity/fields/Oppy_converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Oppy_converted_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Opportunity is created after a Lead conversion, the field is checked.
Otherwise, it's unchecked.</description>
    <label>Oppy converted from Lead</label>
    <type>Checkbox</type>
</CustomField>