unpackaged/main/default/objects/Opportunity/fields/Oppy_TS__c.field-meta.xml
<CustomField>
    <fullName>Oppy_TS__c</fullName>
    <formula>IF(
ISPICKVAL(Manual_Sync_TS__c, 'Yes'),
true,
IF(
ISPICKVAL(Manual_Sync_TS__c, 'No'),
false,
IF(
TECH_IS_TS__c,
true,
false
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppy TS</label>
    <type>Checkbox</type>
</CustomField>