unpackaged/main/default/objects/Opportunity/fields/Origin_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Origin_Lead_Id__c</fullName>
    <label>Origin Lead Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>