unpackaged/main/default/objects/Opportunity/fields/Other_Amount_Sum__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount_Sum__c</fullName>
    <description>Other Amount Sum other product familly</description>
    <label>Other Amount Sum</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.StructureLevel1__c</field>
        <operation>notEqual</operation>
        <value>Licenses, Saas, Professional services</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>