unpackaged/main/default/objects/Opportunity/fields/Other_Event__c.field-meta.xml
<CustomField>
    <fullName>Other_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if oppy has the others event else false</description>
    <label>Other Event</label>
    <type>Checkbox</type>
</CustomField>