unpackaged/main/default/objects/Opportunity/fields/Owner_not_on_account_territory__c.field-meta.xml
<CustomField>
    <fullName>Owner_not_on_account_territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner not on account territory</label>
    <type>Checkbox</type>
</CustomField>