unpackaged/main/default/objects/Opportunity/fields/PAC_Accounts__c.field-meta.xml
<CustomField>
    <fullName>PAC_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAC / Accounts</label>
    <referenceTo>Target_Accounts__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>