unpackaged/main/default/objects/Opportunity/fields/Partner_center_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_center_ID__c</fullName>
    <externalId>true</externalId>
    <label>Partner center ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>