unpackaged/main/default/objects/Opportunity/fields/Partner_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Partner_Consulting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Consulting</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities as Partner Consulting</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>