unpackaged/main/default/objects/Opportunity/fields/Partner_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Partner_Integrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Integrator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an Account with Type Partner.</errorMessage>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Integrator)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>