unpackaged/main/default/objects/Opportunity/fields/Partner_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interaction__c</fullName>
    <formula>IF(	ISPICKVAL( LeadSource, "Partner"),
	"Partner Sourced", 
	IF(
		NOT(ISBLANK( Partner_Distributor__c)),
		"Partner Sold", 
		IF(
			OR(
				NOT(ISBLANK( Partner_Consulting__c )), 
				NOT(ISBLANK( Partner_Integrator__c )),
                                NOT(ISBLANK(  Prescriber__c ))
			),
			"Partner Influenced", 
			"N/A"
		)
	)
)</formula>
    <label>Partner Interaction</label>
    <type>Text</type>
</CustomField>