unpackaged/main/default/objects/Opportunity/fields/Partner_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Partner_To_Pay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner To Pay</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner To Pay)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>