unpackaged/main/default/objects/Opportunity/fields/Post_to_chatter_group__c.field-meta.xml
<CustomField>
    <fullName>Post_to_chatter_group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box used to lunch process to post on Sales chatter Group</description>
    <label>Post_to_chatter_group</label>
    <type>Checkbox</type>
</CustomField>