unpackaged/main/default/objects/Opportunity/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities as Prescriber</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>