unpackaged/main/default/objects/Opportunity/fields/Prof_Booking_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Prof_Booking_Amount2__c</fullName>
    <description>la somme de produits de type Prof Booking</description>
    <label>Prof Booking Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.StructureLevel1__c</field>
        <operation>equals</operation>
        <value>Professional services</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>