unpackaged/main/default/objects/Opportunity/fields/Prof_Services_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prof_Services_Booking_Amount__c</fullName>
    <description>Amount of Prof Services Booking</description>
    <label>Prof Services Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>