unpackaged/main/default/objects/Opportunity/fields/Professional_Services_External_Amount__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_External_Amount__c</fullName>
    <label>Professional Services External Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>