unpackaged/main/default/objects/Opportunity/fields/Professional_Services_External_Worload__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_External_Worload__c</fullName>
    <label>External Consultant Project Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>