unpackaged/main/default/objects/Opportunity/fields/Project_deadline__c.field-meta.xml
<CustomField>
    <fullName>Project_deadline__c</fullName>
    <description>Project deadline</description>
    <label>Project deadline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_deadline</valueSetName>
    </valueSet>
</CustomField>