unpackaged/main/default/objects/Opportunity/fields/Project_Director_Workload__c.field-meta.xml
<CustomField>
    <fullName>Project_Director_Workload__c</fullName>
    <label>Project Director Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>