unpackaged/main/default/objects/Opportunity/fields/Project_Language__c.field-meta.xml
<CustomField>
    <fullName>Project_Language__c</fullName>
    <label>Project Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_ISO</valueSetName>
    </valueSet>
</CustomField>