unpackaged/main/default/objects/Opportunity/fields/Project_s_context_and_trigger__c.field-meta.xml
<CustomField>
    <fullName>Project_s_context_and_trigger__c</fullName>
    <label>Project's context and trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_s_context_and_trigger</valueSetName>
    </valueSet>
</CustomField>