unpackaged/main/default/objects/Opportunity/fields/Project_Team_Names__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Names__c</fullName>
    <label>Project Team Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>