unpackaged/main/default/objects/Opportunity/fields/Project_Technical_Consultant_Workload__c.field-meta.xml
<CustomField>
    <fullName>Project_Technical_Consultant_Workload__c</fullName>
    <label>Project Technical Consultant Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>