unpackaged/main/default/objects/Opportunity/fields/PS_Comments__c.field-meta.xml
<CustomField>
    <fullName>PS_Comments__c</fullName>
    <label>PS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>