unpackaged/main/default/objects/Opportunity/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <formula>IF(Opportunity_Quality_Score__c= 1 , IMAGE('/resource/IMG_Green','Green',20,20),
IMAGE('/resource/IMG_Red','Red',20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quality OK if the following conditions are met
SaaS_Booking_Amount__c &gt;= 30000 € and score medic calculated/ SaaS_Booking_Amount__c &gt;= 10 000€ and Next step completed/ Exceeded closedate by less than 15 days/Opportunity modified less than 3 months ago</inlineHelpText>
    <label>Quality Score</label>
    <type>Text</type>
</CustomField>