unpackaged/main/default/objects/Opportunity/fields/Recruitment__c.field-meta.xml
<CustomField>
    <fullName>Recruitment__c</fullName>
    <label>Recruitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
            <value>
                <fullName>Value 1</fullName>
                <isActive>false</isActive>
                <label>Value 1</label>
            </value>
            <value>
                <fullName>Value 2</fullName>
                <isActive>false</isActive>
                <label>Value 2</label>
            </value>
            <value>
                <fullName>Value 3</fullName>
                <isActive>false</isActive>
                <label>Value 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>